--- a/pov-app-backend/package.json
+++ b/pov-app-backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.1",
     "@types/multer": "^1.4.7",
     "axios": "^1.3.5",
     "mongoose": "^7.0.3",
