--- a/binaryBrain/react-camera/package.json
+++ b/binaryBrain/react-camera/package.json
@@ -9,7 +9,8 @@
     "prop-types": "15.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "throttle-debounce": "^1.0.1"
+    "throttle-debounce": "^1.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
